--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div id = "upload-avatar-div" class = "upload-avatar-div">
                         <img id = "upload-image-btn-one" class = "image-upload-svg" src="./images/icon-upload.svg"/>
                         <input type="file" id="file-input" name="image" accept="image/*" style="display: none"/>
-                        <label for="fileInput">Drag and drop or click to upload</input>
+                        <label for="file-input">Drag and drop or click to upload</label>
                     </div>
                 </div>
                 <div class = "upload-photo-div">
