--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <label>Upload Avatar</label>
                     <div id = "upload-avatar-div" class = "upload-avatar-div">
                         <img id = "upload-image-btn-one" class = "image-upload-svg" src="./images/icon-upload.svg"/>
-                        <input type="file" id="file-input" name="image" accept="image/*"/>
+                        <input type="file" id="file-input" name="image" accept="image/*" display="none"/>
                         <label for="file-input">Drag and drop or click to upload</label>
                     </div>
                 </div>
